# tmuxplayr

./: Cargo.toml  danka.sh
src/: main.rs
