[package]
name = "tmuxplayr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.85"

[target.armv7-linux-androideabi.dependencies]
openssl = { version = "*", features = ["vendored"] }